@@ -580,6 +580,15 @@ Frequency  : rare
 Description: Using wrong pointer in osc_brw_prep_request
 Details    : Access to array[-1] can produce panic if kernel compiled with
 	     CONFIG_PAGE_ALLOC enabled
+
+Severity   : enhancement
+Bugzilla   : 4900
+Description: Async OSC create to avoid the blocking unnecessarily.
+Details    : If a OST has no remain object, system will block on the creating
+	     when need to create a new object on this OST. Now, ways use
+	     pre-created objects when available, instead of blocking on an
+	     empty osc while others are not empty.  If we must block, we block
+	     for the shortest possible period of time.
 	     
 --------------------------------------------------------------------------------
 
